[tool.poetry]
name = "that-civil-tweet"
version = "0.1.0"
description = ""
authors = ["Simon Whitaker <sw@netcetera.org>"]
readme = "README.md"
# packages = [{include = "that_civil_tweet"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.notebook.dependencies]
matplotlib = "^3.6.2"
pandas = "^1.5.1"
pandas-bokeh = "^0.5.5"
ipykernel = "^6.17.0"
bokeh = "~2.4.2"



[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"
